workshop04/minio-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minions
  labels:
    app: minio
    name: minio-hsvc
spec:
  clusterIP: None  # Setting clusterIP to None makes it a headless service
  selector:
    app: minio
    name: minio-po
  ports:
  - name: data 
    port: 9000
    targetPort: 9000
  - name: console
    port: 9090
    targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minions
  labels:
    app: minio
    name: minio-hsvc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
  - name: data 
    port: 9000
    targetPort: 9000
  - name: console
    port: 9090
    targetPort: 9090
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minions
  labels:
    app: minio
    name: minio-sts
spec:
  replicas: 3
  serviceName: minio-hsvc
  selector:
    matchLabels:
      app: minio
      name: minio-po
  volumeClaimTemplates:
  - metadata:
      name: data-vol
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      name: minio-po
      labels:
        app: minio
        name: minio-po
    spec:
      containers:
      - name: minioapp-container
        image: bitnami/minio:2023.9.23
        imagePullPolicy: IfNotPresent
        command:
        - minio
        - server
        - --address=:9000
        - --console-address=:9090
        - http://mini-sts-{0...2}.minio-hsvc.minions.svc.cluster.local/data
        ports:
        - name: data
          containerPort: 9000
        - name: console
          containerPort: 9090
        volumeMounts:
        - name: data-vol
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          periodSeconds: 60
